# futureproof-claude

./: .claudeignore  .gitignore  .remember  ADMIN_REWRITE_PLAN.md  AGENTIC_AI_RECOMMENDATIONS.md  AGENT_LIFECYCLE_SYSTEM.md  AI_BUILD_SPEC.md  ALWAYS_BROWSER_TEST.md  APPLICATION_UX_RECOMMENDATIONS.md  AUDIT_REPORT.md  AUTOMATED_TESTING_SUMMARY.md  BACKUP_AND_ROLLBACK_READY.txt  BROWSER_TESTING_MANDATE.md  BUILD_SPEC.md  BUSINESS_REQUIREMENTS.md  CLAUDE.md  CODE_REVIEW.md  CRITICAL_DEVELOPMENT_NOTES.md  CRITICAL_PATH_TO_COMPLETION.md  CSP_VIOLATIONS_REMINDER.md  CURRENT_STATE_AUDIT.md  DEPLOYMENT_READY.md  DESIGN_PRINCIPLES.md  DESIGN_SYSTEM.md  Dockerfile  EMAIL_TEMPLATE_GUIDELINES.md  EXECUTION_PLAN.md  FORM_VS_VISUAL_COMPARISON.md  FutureProof_EPM_Technical_Architecture.html  FutureProof_EPM_Technical_Architecture.md  Futureproof_Newco_JV_Analysis.md  GAP_ANALYSIS.md  Gemfile  Gemfile.scraper  HOW_TO_ACCESS_NEW_SYSTEMS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT_NOTES.md  JURISDICTION_SECURITY_FIXES.md  LEGAL_DOCUMENTS_SUMMARY.md  (+167 more)
python/rust_monte_carlo/: ARCHITECTURE.md  BUG_ANALYSIS.md  CASH_RATE_FIX.md  CONSOLIDATED_SUMMARY.md  CONVERGENCE_ANALYSIS.md  CRITICAL_BUGS_FOUND.md  CRITICAL_BUG_FIX.md  CRITICAL_BUG_FIXED.md  Cargo.toml  EXCEL_vs_PYTHON_COMPARISON.md  EXECUTIVE_SUMMARY.md  PARAMETER_CHANGE_IMPACT.md  PARAMETER_COMPARISON.md  PERFORMANCE_FIX.md  PERFORMANCE_INVESTIGATION.md  PYTHON_SPEC.md  QUICKSTART.md  README.md  SUMMARY.md  VALIDATION_SUCCESS.md  VIABILITY_EXPLANATION.md  analyze_excel_model.py  build.sh  (+35 more)
rust_epm_v2/: Cargo.toml
(+2015 files in other folders)
