[package]
name = "futureproof-epm"
version = "2.0.0"
edition = "2021"
description = "FutureProof Equity Preservation Mortgage – Monte Carlo Engine v2"

[[bin]]
name = "epm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
csv = "1"

[profile.release]
opt-level = 3
lto = true
